[tool.poetry]
name = "mypy-reproduce"
version = "0.1.0"
description = ""
authors = ["jmarkin <me@jmarkin.ru>"]
packages = [{include = "mypy_reproduce"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1"
pydantic-factories = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
